--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -8,7 +8,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/main_background"
+            android:src="@drawable/n"
             android:scaleType="centerCrop" />
         <ListView
             android:id="@+id/main_content_list"
