--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -13,5 +13,6 @@
         <ListView
             android:id="@+id/main_content_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></ListView>
+            android:layout_height="wrap_content"
+            android:divider="#00ffffff"></ListView>
 </RelativeLayout>
