--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -1,30 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="#ffffff">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:id="@+id/main_list_item_image"
-        android:paddingTop="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:layout_gravity="center_horizontal"
-        android:scaleType="fitXY" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingBottom="5dp"
-        android:id="@+id/main_list_item_text"
-        android:textColor="#000000"
-        android:textSize="20dp"
-        android:textIsSelectable="true" />
-</LinearLayout>-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:paddingTop="10dp"
@@ -37,20 +11,19 @@
         android:layout_height="180dp"
         android:scaleType="fitXY" />
     <TextView
-        android:id="@+id/main_list_item_text_desc"
+        android:id="@+id/main_list_item_text"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_below="@id/main_list_item_image"
         android:textSize="20dp"
         android:background="#c2ffffff"/>
     <TextView
-        android:id="@+id/main_list_item_text"
+        android:id="@+id/main_list_item_text_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:textColor="#ffffff"
         android:textSize="20dp"
-        android:layout_above="@id/main_list_item_text_desc"
+        android:layout_above="@id/main_list_item_text"
         android:textStyle="bold" />
-
 </RelativeLayout>
