Information file Added in Assets folder

--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -24,6 +24,5 @@
         android:layout_centerVertical="true"
         android:textColor="#ffffff"
         android:textSize="20dp"
-        android:layout_above="@id/main_list_item_text"
-        android:textStyle="bold" />
+        android:layout_above="@id/main_list_item_text"/>
 </RelativeLayout>
