--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -8,8 +8,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/n"
-            android:scaleType="centerCrop" />
+            android:src="@drawable/i"
+            android:scaleType="centerCrop"/>
         <ListView
             android:id="@+id/main_content_list"
             android:layout_width="match_parent"
