--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -9,20 +9,14 @@
         android:id="@+id/main_list_item_image"
         android:layout_width="match_parent"
         android:layout_height="180dp"
-        android:scaleType="fitXY" />
+        android:scaleType="fitXY"
+        />
     <TextView
         android:id="@+id/main_list_item_text"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_below="@id/main_list_item_image"
+        android:layout_height="30dp"
         android:textSize="20dp"
-        android:background="#c2ffffff"/>
-    <TextView
-        android:id="@+id/main_list_item_text_desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:textColor="#ffffff"
-        android:textSize="20dp"
-        android:layout_above="@id/main_list_item_text"/>
+        android:background="@drawable/title_style"
+        android:layout_below="@id/main_list_item_image"/>
 </RelativeLayout>
