--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,6 @@
         <item name="android:focusable">true</item>
         <item name="android:clickable">true</item>
         <item name="android:layout_marginBottom">5dp</item>
-        S<item name="android:layout_marginTop">5dp</item>
+        <item name="android:layout_marginTop">5dp</item>
     </style>
 </resources>
