--- a/app/src/main/res/drawable/question_card_style.xml
+++ b/app/src/main/res/drawable/question_card_style.xml
@@ -4,7 +4,7 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
                android:shape="rectangle" >
             <corners android:radius="25dp"/>
-            <solid android:color="#ffffff"/>
+            <solid android:color="#97ffffff"/>
 
 
             <size android:width="270dp" android:height="60dp"/>
