--- a/app/src/main/res/layout/activity_cat_questions.xml
+++ b/app/src/main/res/layout/activity_cat_questions.xml
@@ -21,6 +21,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/question_card_style">
         <RelativeLayout
+            android:id="@+id/head"
             android:layout_width = "match_parent"
             android:layout_height = "wrap_content">
             <ImageButton
@@ -96,5 +97,4 @@
 
 
     </LinearLayout>
-
 </RelativeLayout>
