--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="none"
+            android:paddingTop="2dp" android:paddingBottom="2dp"
             android:divider="#00ffffff" android:dividerHeight="20dp" android:paddingLeft="20dp"
             android:paddingRight="20dp"/>
 </RelativeLayout>
